fix: Fixed FancyBox display issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,6 +294,9 @@ https://www.google.com/search?q=how+to+make+a+responsive+square+in+css&rlz=1C1CH
 /*---------------------------- About Us -------------*/
 
 
+/*---------------------------- Classes -------------*/
+
+
 
 /*---------------------------- Contact Form -------------*/
 
@@ -363,7 +366,7 @@ https://www.google.com/search?q=how+to+make+a+responsive+square+in+css&rlz=1C1CH
 /*---------------------------- Gallery -------------*/
 
 .gallery-thumbnail {
-    height: 225px;
+    height: 175px;
 }
 
 #gallery_photo {
@@ -371,6 +374,10 @@ https://www.google.com/search?q=how+to+make+a+responsive+square+in+css&rlz=1C1CH
     line-height: 0; 
     column-count: 2; 
     column-gap: 0px;
+}
+
+.gallery-image {
+    width: 100%;
 }
 
 /*---------------------------- Footer -------------*/
